# P7

./: .gitignore  Dockerfile  docker-compose.yml  readme.md  spammer.ts
.github/workflows/: auction-test.yml  build-contract.yml
auction/: package-lock.json  package.json  package.json.old  tsconfig.json  tsoa.json
auction/src/: app.ts  auction.hs  auction.ts  index.ts
auction/src/api/: apiController.ts  apiService.ts  users.ts
auction/src/users/: user.ts  usersController.ts  usersService.ts
auction/tests/: auction-test.ts  auction.ts
solana/energy-trading/: Anchor.toml  package-lock.json  package.json
solana/energy-trading/experiments/: helpers.ts  tps.ts
solana/energy-trading/programs/Energy-Market/: Cargo.toml
solana/energy-trading/programs/Energy-Market/src/: data_accounts.rs  errors.rs  lib.rs
solana/energy-trading/programs/Energy-Market/src/instructions/: create_energy_token_storage.rs  execute_trade.rs  initialize_smart_power_storage.rs  mod.rs  release_cash.rs  reset_smart_power_storage.rs  (+3 more)
solana/energy-trading/programs/energy-bidding/: Cargo.toml
solana/energy-trading/programs/energy-bidding/src/: lib.rs
solana/energy-trading/programs/energy-injection/: Cargo.toml
solana/energy-trading/programs/energy-injection/src/: errors.rs  lib.rs
solana/energy-trading/programs/tic-tac-toe/: Cargo.toml
solana/energy-trading/programs/tic-tac-toe/src/: lib.rs
solana/energy-trading/tests/: energy-bidding.ts  energy-injection.ts  energy-trading.ts  helpers.ts  tic-tac-toe.ts
solana/energy-trading/tests/experiments/: helpers.ts  tps.ts
